2005-02-17  Jay Rossiter <cryptographite@users.sf.net>  1.5-RC1-cvs-b8

	* Change: Add a new config option for bypassing our register_globals-disabled
	  emulation.  I do this unwillingly, and it is not a supported
	  configuration due to the potential for security issues and other problems
	  bug some people require the option.

2005-02-15  Jay Rossiter <cryptographite@users.sf.net>  1.5-RC1-cvs-b7

	* Fix: Move SMTP execution into its own function to be 
	  reused in emailLogMessage()

	* Fix: Remove admin page link for non-admins

2005-02-15  Jay Rossiter <cryptographite@users.sf.net>  1.5-RC1-cvs-b6

	* Fix: Print providers didn't display correctly if only one was selected

2005-02-15  Jay Rossiter <cryptographite@users.sf.net>  1.5-RC1-cvs-b5

	* Fix: Correct the directory name for CPGNuke includes

2005-02-15  John Kirkland <jpk@bl.org>  1.5-RC1-cvs-b4

	* Fix: the mambo breadcrumb query in init.php was not quite
          specific enough.
        * Fix: the mambo component name, com_gallery, was being set
          by a variable, but this doesn't work in all cases.

2005-02-15  Jay Rossiter <cryptographite@users.sf.net>  1.5-RC1-cvs-b3

	* Change: Move PhotoWorks/PhotoAccess down in the list, to preemptively
	  resolve some issues.

	* Fix: Make some changes to the logic surrounding when EXIF info is displayed
	  with images.  (If use_exif is set in the album, display it under the photo.
	  If use_exif is disabled, but exiftags or jhead is present, display the
	  "photo properties" link instead)

2005-02-15  Jay Rossiter <cryptographite@users.sf.net>  1.5-RC1-cvs-b2

	* Fix: ML_mode 0 caused error when gettext wasn't installed
	  due to duplicate function declaration

2005-02-15  Jay Rossiter <cryptographite@users.sf.net>  1.5-RC1-cvs-b1

	* Fix: backup_albums.php was not globalized

	* Text: Add the [] around the stats links for readability

2005-02-14  Chris Kelly <ckdake@users.sf.net> 1.5-RC1

	* v1.5 Release Candidate 1
